:memo:JavaScript in Progress

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Concept</title>
+    
 </head>
 <body>
-    <script src = "ObjectsLiterals.js"></script>
+    <h1>Hello JavaScript</h1>
+    <script src = "try.js"></script>
 </body>
 </html>
