--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,8 +7,13 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h2>Hi There!</h2>
-    <p>My name is Tom & I am there to the given style guidelines. I hope everyone is happy.</p>
-    <button>Need Help</button>
+    <h1>Random Heading</h1>
+    <div>Technology has become an essential part of our daily lives, influencing how we communicate, learn, and work. With constant advancements, 
+        it continues to shape the future, offering both opportunities and challenges.<span>Inline</span> Whether through smartphones, artificial intelligence, or the internet, 
+        technology connects people across the globe and makes information more accessible than ever before.</div>
+    <div>
+        <button>Click Me</button>
+    </div>
+    <div id = "div1">div1</div>
 </body>
 </html>
