--- a/CSS/practice.html
+++ b/CSS/practice.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Chapter2</title>
-    <link rel = "stylesheet" href = "h2.css">
+    <link rel = "stylesheet" href = "first.css">
 
   </head>
   <body>
@@ -71,7 +71,16 @@
                 <button class = "upvote">+upvote</button>
                 <button>answer</button>
             </span>
+            <p>This is a paragraph. <br>you know.
+                
+            </p>
             <hr />
+            <div>
+                <input type = "radio" id = "yess" name = "agree">
+                <label for = "yes"> Yes</label>
+                <input type = "radio" id = "no" name = "agree">
+                <label for = "no">No</label>
+            </div>
     </main>
   </body>
 </html>
