--- a/JavaScript/app3.html
+++ b/JavaScript/app3.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "ObjectsLiterals.js"></script>
+    <script src = "first.js"></script>
 </body>
 </html>
