--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello JavaScript</h1>
-    <script src = "try.js"></script>
+     <script src = "second.js"></script>
 </body>
 </html>
