--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Concept</title>
-    
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello JavaScript</h1>
-     <script src = "second.js"></script>
+    <h1>Happy Coding</h1>
+      <script src = "P.js"></script>
 </body>
 </html>
